--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Página de prueba<title>
+  <title>Página de prueba</title>
 </head>
 <body>
-  <h1>Hola amiguitos!</h1>
+  <h1>Hello world</h1>
   <footer>gpuma 2017</footer>
 </body>
 </html>
