--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Página de prueba</title>
+  <title>Amitabha Dey</title>
 </head>
 <body>
-  <h1>Hello world</h1>
-  <footer>gpuma 2017</footer>
+  <h1>There's nothing here. Go to my <a href="www.amitabhadey.com>website</a>.</h1>
 </body>
 </html>
