--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <title>Amitabha Dey</title>
 </head>
 <body>
-  <p>There's nothing here. Go to my <a href="www.amitabhadey.com>website</a>.</p>
+  <p>There's nothing here. Go to my <a href="www.amitabhadey.com">website</a>.</p>
 </body>
 </html>
