--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <title>Amitabha Dey</title>
 </head>
 <body>
-  <p>There's nothing here. Go to <b>www.amitabhadey.com</b></p>
+  <p>There's nothing here. Go to <b> <a href ="https://amitabhadey.com/">www.amitabhadey.com</a></b></p>
 </body>
 </html>
